--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Current Date</title>
+    <title>Today's Date</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,7 +29,7 @@
             month: 'long',
             day: 'numeric',
         });
-        document.getElementById('date').textContent = currentDate;
+        document.getElementById('date').textContent = `Today is ${currentDate}`;
     </script>
 </body>
 </html>
